Updating toolbar with name and fixing mobile spacing issue

--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -1,3 +1,7 @@
 .toolbar {
     font-size: 1.5em;
 }
+
+.toolbar-heading-text {
+    margin-bottom: 0;
+}
